# qdrant-loader-mcp-server

./: .coveragerc  .gitignore  README.md  config.template.yaml  pyproject.toml  test_qdrant.py  test_server.py
.cursor/: mcp.json  mcp.template.json
.cursor/rules/: 01-project-structure.mdc  02-coding-standards.mdc  03-mcp-server-guidelines.mdc
docs/: ClientUsage.md  CodingStandards.md  MCPConfiguration.md  PRD.md  SSEImplementationPlan.md  TechnicalSpecification.md  TestingStrategy.md
src/: config.py  main.py
src/mcp/: __init__.py  handler.py  models.py  protocol.py
src/search/: __init__.py  engine.py  hybrid_search.py  models.py  processor.py
src/utils/: __init__.py  logging.py
tests/unit/: test_mcp_client.py  test_mcp_handler.py  test_mcp_protocol.py  test_protocol.py
tests/unit/search/: test_hybrid_search.py
